# RogueLikeGame

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ge/siradze/roguelike/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/bullets/: bullets_c.comp  bullets_f.frag  bullets_spawn.comp  bullets_v.vert
app/src/main/assets/shaders/enemy/: enemy_c.comp  enemy_f.frag  enemy_v.vert
app/src/main/assets/shaders/fortress/: fortress_f.frag  fortress_v.vert
app/src/main/assets/shaders/player/: player_f.frag  player_v.vert
app/src/main/assets/shaders/player/aim/: aim_f.frag  aim_v.vert
app/src/main/assets/shaders/player/line/: line_v.vert
app/src/main/cpp/: CMakeLists.txt  GameRendererBridge.cpp  ResourcesBridge.cpp  native-lib.cpp
app/src/main/cpp/assets/: AssetManager.cpp
app/src/main/cpp/events/: Move.h
app/src/main/cpp/game/: GameGLConfig.cpp  GameRenderer.cpp  GameRenderer.h
app/src/main/cpp/game/objects/: GameObject.h
app/src/main/cpp/game/objects/base/: GLObjectData.h  Translation.h  UniformLocations.h
app/src/main/cpp/game/objects/entities/: IEnemyTarget.h
app/src/main/cpp/game/objects/entities/bullets/: Bullets.cpp  Bullets.h  BulletsRender.cpp
app/src/main/cpp/game/objects/entities/bullets/api/: BulletUniforms.h  BulletsApi.h
app/src/main/cpp/game/objects/entities/camera/: Camera.cpp  Camera.h
app/src/main/cpp/game/objects/entities/enemy/: Enemy.cpp  Enemy.h  EnemyRenderer.cpp  EnemyUniforms.h
app/src/main/cpp/game/objects/entities/fortress/: Fortress.cpp  Fortress.h  FortressGenerator.cpp  FortressRenderer.cpp
app/src/main/cpp/game/objects/entities/player/: Player.cpp  Player.h
app/src/main/cpp/game/objects/entities/player/renderer/: PlayerRenderer.cpp  PlayerRenderer.h
app/src/main/cpp/game/objects/entities/player/renderer/aim/: AimRenderer.cpp  AimRenderer.h
app/src/main/cpp/game/objects/entities/player/renderer/line/: LineRenderer.cpp  LineRenderer.h
app/src/main/cpp/game/objects/player/: Player.cpp  Player.h  PlayerRenderer.cpp  PlayerRenderer.h
app/src/main/cpp/game/objects/player/renderer/: AimRenderer.cpp  AimRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h
app/src/main/cpp/game/objects/player/renderer/aim/: AimRenderer.cpp  AimRenderer.h
app/src/main/cpp/game/objects/player/renderer/line/: LineRenderer.cpp  LineRenderer.h
app/src/main/cpp/game/objects/primitives/: Plane.h
app/src/main/cpp/game/objects/shaders/: ShadersPaths.h
app/src/main/cpp/game/time/: DeltaTime.cpp  DeltaTime.h
app/src/main/cpp/game/utils/: MathUtils.cpp  MathUtils.h  OpenglUtils.cpp
app/src/main/cpp/game/vbo/: ISSBOBuffer.h  SSBOReader.cpp  SSBOReader.h
app/src/main/java/ge/siradze/roguelike/: GameRenderer.kt  GameView.kt  MainActivity.kt
app/src/main/java/ge/siradze/roguelike/extentions/: MathExtensions.kt
app/src/main/java/ge/siradze/roguelike/ui/: GameUI.kt  (+1 more)
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ge/siradze/roguelike/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
